2001-01-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDate.m: pass dates over DO bycopy unless explicitly byref.
	* Source/NSTimeZone.m: pass time zones over DO bycopy unless
	explicitly byref.

2001-01-30  Michael Hanni  <mhanni@sprintmail.com>

	* Source/.cvsignore: tweaked to cover a few more items.

2001-01-30  Nicola Pero  <nicola@brainstorm.co.uk>

	* gnustep-base.script.spec.in: Fixed, tidied.
	* configure.in (CPPFLAGS): Added -I$GNUSTEP_HDIR so that custom
	libobjc headers are used - this should fix ffcall detection.
	* configure: Regenerated.
	
2001-01-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSDate.h: Partial support added for MacOS-X
	* Source/NSTimeZone.m: Updates to encode all time zones as the
	abstract class, and added MacOS-X methods.
	* Source/NSCalendarDate.m: Use NSTimeZone rather than NSTimeZoneDetail
	throughout ... provide MacOS-X compatibility.
	* Source/NSDate.m: Fix milliseconds error creating date on MINGW

2001-01-29  Adam Fedor  <fedor@gnu.org>

	* configure.in: Remove check for alternate libobjc and Headers
	include. Fix typo in setting cppflags_temp in GMP test.
	* Source/Makefile.preamble (ADDITIONAL_INSTALL_DIRS): Don't
	make .../gnustep/Foundation
	* Source/Makefile.postamble (after-install): Don't install headers
	in .../gnustep/Foundation

2001-01-29  Nicola Pero  <nicola@brainstorm.co.uk>

	* GNUmakefile: Include local base.make.
	* Admin/GNUmakefile: Idem.
	* Documentation/GNUmakefile: Idem.
	* Documentation/gsdoc/GNUmakefile: Idem.
	* Examples/GNUmakefile: Idem.
	* NSCharacterSets/GNUmakefile: Idem. 
	* NSTimeZones/GNUmakefile: Idem.
	* Testing/GNUmakefile: Idem.
	* Tools/GNUmakefile: Idem.
	* Resources/GNUmakefile: Idem.
	* Source/GNUmakefile: Idem.
	* configure.in (tests for ffi): set CONFIG_SYSTEM_LIBS too
	(test for iconv): test taken from the make package.  (AC_OUTPUT):
	Generate base.make.
	* configure: Regenerated.
	* base.make.in: New file.